# Planefit

./: CMakeLists.txt
include/: main.h  planeFit.h
src/: main.cpp  planeFit.cpp
